--- a/example_1_yolo_object_detection/requirements.txt
+++ b/example_1_yolo_object_detection/requirements.txt
@@ -1,4 +1,3 @@
-# YOLOv8 Object Detection Edge AI Demo Dependencies
-ultralytics>=8.0.0
-opencv-python>=4.5.0
-psutil>=5.8.0
+ultralytics>=8.3.0
+opencv-python>=4.11.0
+streamlit>=1.51.0
